@@ -3,11 +3,6 @@
 ACLOCAL_AMFLAGS = -I m4
 RDOC = rdoc
 
-EXTRA_DIST = \
-	$(srcdir)/lib/*.rb \
-	$(srcdir)/lib/kasp_auditor/*.rb \
-	$(srcdir)/sorttest.txt
-
 MAINTAINERCLEANFILES = \
 	config.log config.status \
 	$(srcdir)/Makefile.in \
@@ -45,3 +40,28 @@ rdoc:
 		--exclude ${srcdir}/test \
 		--exclude ${builddir}/test \
 		${srcdir} ${builddir}
+
+EXTRA_DIST =	$(srcdir)/lib/*.rb \
+		$(srcdir)/lib/kasp_auditor/*.rb \
+		$(srcdir)/sorttest.txt \
+		$(srcdir)/test_scripts/*.rb \
+		$(srcdir)/test/kaspcheck_bad/*.xml \
+		$(srcdir)/test/kaspcheck_good/*.xml \
+		$(srcdir)/test/signer_test_bad/*.xml \
+		$(srcdir)/test/signer_test_bad/*.partial \
+		$(srcdir)/test/signer_test_bad/signed_zones/*.nsec \
+		$(srcdir)/test/signer_test_bad/signed_zones/*.nsec3 \
+		$(srcdir)/test/signer_test_bad/zone_config/*.nsec \
+		$(srcdir)/test/signer_test_bad/zone_config/*.nsec3 \
+		$(srcdir)/test/signer_test_bad/zone_config/*.partial \
+		$(srcdir)/test/signer_test_good/*.xml \
+		$(srcdir)/test/signer_test_good/signed_zones/*.nsec \
+		$(srcdir)/test/signer_test_good/signed_zones/*.nsec3 \
+		$(srcdir)/test/signer_test_good/zone_config/*.nsec \
+		$(srcdir)/test/signer_test_good/zone_config/*nsec3 \
+		$(srcdir)/test/tmp/*.inbound \
+		$(srcdir)/test/tmp1/*.inbound \
+		$(srcdir)/test/tmp2/*.inbound \
+		$(srcdir)/test/tmp3/*.inbound \
+		$(srcdir)/test/tmp3/tracker/*.nl \
+		$(srcdir)/test/tmp3/tracker/*.config
